...
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_type"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:alpha="0.38"/>

        <EditText
            android:hint="Event Name"
            android:singleLine="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/eventname"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:alpha="0.54"/>

        <EditText
            android:hint="Event Location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/eventlocation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:alpha="0.54"/>

        <EditText
            android:hint="Number of Tickets"
            android:layout_width="300dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:id="@+id/numberoftickets"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:alpha="0.54"/>

        <TextView
            android:text="Date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@android:drawable/ic_menu_today"
            android:layout_gravity="center"
            android:gravity="bottom"
...
            android:alpha="0.54"/>

        <TextView
            android:text="Time"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:drawableRight="@android:drawable/ic_menu_recent_history"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/editTextBackground"
            android:layout_gravity="center"
...
                android:alpha="0.54"/>

            <CheckBox
                android:text="Free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_price"
                android:onClick="cb_clicked"
                android:alpha="0.54"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_done_white_18dp"
        app:elevation="3dp"
...
