<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offer_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="de.ticket_match.ticketmatch.MainActivity">

    <LinearLayout
...
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/offeroverview_list"
        android:layout_weight="1"
            android:alpha="0.54"/>-->

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
            app:elevation="3dp"
            android:onClick="btn_search_ticket"
            app:backgroundTint="#FFAB00"
            android:clickable="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_add_white_18dp"
...
