<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="de.ticket_match.ticketmatch.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2196F3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/tm_logo"
                    android:layout_margin="10dp"
                    android:onClick="btn_website"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Register for TicketMatch"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:alpha="0.12"/>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:text="Fill in all information to register!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="normal|bold"
                android:alpha="0.54"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/register_firstname"
                android:hint="First name"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/register_lastname"
                android:hint="Last name"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/register_email"
                android:hint="E-Mail"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/register_password"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/register_location"
                android:hint="Location"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>


            <TextView
                android:text="Birthday"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/register_birthdate"
                android:drawableRight="@android:drawable/ic_menu_today"
                android:background="?attr/editTextBackground"
                android:gravity="bottom"
                android:onClick="register_birthdate"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:alpha="0.54"/>


            <Spinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/register_gender"
                android:alpha="0.38"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="#222222"
                android:layout_gravity="center"
                android:alpha="0.12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                android:text="Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btn_register"
                android:alpha="0.54"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/btnRegister"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>

    </ScrollView>

</android.widget.RelativeLayout>
