...
            <TextView
                android:text="No account yet? Register!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btn_activity_register"
                android:id="@+id/textViewRegister"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#2196F3"
                android:alpha="0.54"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
...
