<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_make_adate"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="de.ticket_match.ticketmatch.MakeADate_SearchResults">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!--<ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/listview_makeadate_results"
            android:layout_weight="1"
            android:alpha="0.54"/>-->

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/makedate_searchresults"/>

    </LinearLayout>

</android.widget.RelativeLayout>
