...
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_margin="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:id="@+id/makeadate_results_row_date"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:gravity="left" />

                <TextView
                    android:layout_width="0dp"
...
